increase memory settings for karaf tests